# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  lint-and-test.yml
gendiff/: __init__.py  compare.py  formatters.py  parse.py
gendiff/scripts/: main.py
tests/: test_compare.py  test_main.py  test_parse.py
tests/test_data/: file1.yaml  file2.yaml
